--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -87,7 +87,7 @@
     <div class="col-md-6">
       <div class="glass-card card p-4 animate__animated animate__fadeIn">
         <h2 class="mb-4 text-center">Login to Your Account</h2>
-        <form method="post" autocomplete="off">
+        <form method="post" action="{% url 'login' %}">
           {% csrf_token %}
           {% for field in form %}
           <div class="floating-label-group">
@@ -98,6 +98,9 @@
           {% endfor %}
           <button type="submit" class="btn btn-success w-100 mt-3">Login</button>
         </form>
+        <div class="text-center mt-3">
+            <a href="{% url 'password_reset_request' %}" class="text-decoration-none text-warning fw-bold">Forgot Password?</a>
+        </div>
         <p class="mt-3 text-center">Don't have an account? <a href="{% url 'register' %}">Register</a></p>
       </div>
     </div>
